Small alignment fix for treetoggle icon

--- a/skins/elastic/styles/widgets/lists.less
+++ b/skins/elastic/styles/widgets/lists.less
@@ -373,7 +373,7 @@ ul.treelist {
             &:before {
                 &:extend(.font-icon-class);
                 content: @fa-var-angle-right;
-                width: (@treelist-treetoggle-width - .3em);
+                margin-left: .25em;
             }
 
             &.expanded:before {
